# cmake file for duilib
#Author Qi Gao(monkgau@gmail.com)
#Created: 2012/09/16

PROJECT(DuiLib)
MESSAGE(STATUS "${PROJECT_NAME}")
MESSAGE(STATUS "    PROJECT_VERSION:    ${PROJECT_VERSION}")
MESSAGE(STATUS "    PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "    PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "    CMAKE_SOURCE_DIR:   ${CMAKE_SOURCE_DIR}")

ADD_DEFINITIONS(-DUILIB_EXPORTS)

FILE(GLOB ROOT_INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hpp
)
FILE(GLOB ROOT_SRC_FILES 
    ${PROJECT_SOURCE_DIR}/*.c
    ${PROJECT_SOURCE_DIR}/*.cpp
)
SET(ROOT_ALL_FILES
    ${ROOT_INCLUDE_FILES}
    ${ROOT_SRC_FILES}
)

FILE(GLOB UTILS_INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/Utils/*.h
    ${PROJECT_SOURCE_DIR}/Utils/*.hpp
)
FILE(GLOB UTILS_SRC_FILES 
    ${PROJECT_SOURCE_DIR}/Utils/*.c
    ${PROJECT_SOURCE_DIR}/Utils/*.cpp
)
SET(UTILS_ALL_FILES
    ${UTILS_INCLUDE_FILES}
    ${UTILS_SRC_FILES}
)

FILE(GLOB CORE_INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/Core/*.h
    ${PROJECT_SOURCE_DIR}/Core/*.hpp
)
FILE(GLOB CORE_SRC_FILES 
    ${PROJECT_SOURCE_DIR}/Core/*.c
    ${PROJECT_SOURCE_DIR}/Core/*.cpp
)
SET(CORE_ALL_FILES
    ${CORE_INCLUDE_FILES}
    ${CORE_SRC_FILES}
)

FILE(GLOB LAYOUT_INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/Layout/*.h
    ${PROJECT_SOURCE_DIR}/Layout/*.hpp
)
FILE(GLOB LAYOUT_SRC_FILES 
    ${PROJECT_SOURCE_DIR}/Layout/*.c
    ${PROJECT_SOURCE_DIR}/Layout/*.cpp
)
SET(LAYOUT_ALL_FILES
    ${LAYOUT_INCLUDE_FILES}
    ${LAYOUT_SRC_FILES}
)

FILE(GLOB CONTROL_INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/Control/*.h
    ${PROJECT_SOURCE_DIR}/Control/*.hpp
)
FILE(GLOB CONTROL_SRC_FILES 
    ${PROJECT_SOURCE_DIR}/Control/*.c
    ${PROJECT_SOURCE_DIR}/Control/*.cpp
)
SET(CONTROL_ALL_FILES
    ${CONTROL_INCLUDE_FILES}
    ${CONTROL_SRC_FILES}
)

SET(ALL_HEADER_FILES
    ${ROOT_INCLUDE_FILES}
    ${UTILS_INCLUDE_FILES}
    ${LAYOUT_INCLUDE_FILES}
    ${CORE_INCLUDE_FILES}
    ${CONTROL_INCLUDE_FILES}
)

SET(ALL_SRC_FILES
    ${ROOT_SRC_FILES}
    ${UTILS_SRC_FILES}
    ${LAYOUT_SRC_FILES}
    ${CORE_SRC_FILES}
    ${CONTROL_SRC_FILES}
)

SET(ALL_FILES
    ${ALL_HEADER_FILES}
    ${ALL_SRC_FILES}
)

FUNCTION(GROUP_FILES ARGS)
    MATH(EXPR BEGIN_INDEX 0)
    MATH(EXPR END_INDEX "${ARGC} - 1")
    LIST(GET ARGV ${BEGIN_INDEX} TARGET_FILES)
    LIST(GET ARGV ${END_INDEX}   GROUP_PREFIX)
    MESSAGE(STATUS "TARGET_FILES: ${TARGET_FILES}")
    MESSAGE(STATUS "GROUP_PREFIX: ${GROUP_PREFIX}")
    SET(INDEX ${BEGIN_INDEX})
    WHILE(INDEX LESS ${END_INDEX})
        LIST(GET ARGV ${INDEX} FILE)
        GET_FILENAME_COMPONENT(PARENT_DIR "${FILE}" DIRECTORY)
        STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" GROUP "${PARENT_DIR}")
        STRING(REPLACE "/" "\\" GROUP "${GROUP}")
        SET(GROUP "${GROUP_PREFIX}${GROUP}")
        MESSAGE(STATUS "Group ${FILE} to ${GROUP}")
        SOURCE_GROUP("${GROUP}" FILES "${FILE}")
        MATH(EXPR INDEX "${INDEX} + 1")
    ENDWHILE()
ENDFUNCTION()

GROUP_FILES(${ALL_HEADER_FILES} "Header Files")
GROUP_FILES(${ALL_SRC_FILES}    "Source Files")

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
)

ADD_LIBRARY(
    ${PROJECT_NAME}
    SHARED
    ${ALL_FILES}
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    comctl32
)