#Cmake file for RichListDemo
#Author: Qi Gao(monkgau@gmail.com)
#Created: 2012/9/17
PROJECT(RichListDemo)
MESSAGE(STATUS "${PROJECT_NAME}")
MESSAGE(STATUS "    PROJECT_VERSION:    ${PROJECT_VERSION}")
MESSAGE(STATUS "    PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "    PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "    CMAKE_SOURCE_DIR:   ${CMAKE_SOURCE_DIR}")

FILE(GLOB_RECURSE RESOURCE_FILES
    ${PROJECT_SOURCE_DIR}/*.rc
    ${PROJECT_SOURCE_DIR}/resource.h
)

FILE(GLOB_RECURSE INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hpp
)

FILE(GLOB_RECURSE SRC_FILES
    ${PROJECT_SOURCE_DIR}/*.c
    ${PROJECT_SOURCE_DIR}/*.cpp
)

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${SRC_FILES}
    ${INCLUDE_FILES}
    ${RESOURCE_FILES}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} DuiLib)

ADD_CUSTOM_COMMAND(
    TARGET ${PROJECT_NAME}
    POST_BUILD
    COMMAND XCOPY "\"${CMAKE_SOURCE_DIR}/bin\"" "\"${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}\"" /e /y
)